# rpc

./: CMakeLists.txt  README.md
example/: friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  logger.h  mprpcchannel.h  rpcprovider.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: mprpcapplication.h  mprpcconfig.h  mprpccontroller.h
test/protobuf/: main  main.cc  test.pb.cc  test.pb.h  test.proto
